--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "cd ./server/ && node index.js",
+    "start": "npm run build && cd ./server/ && node index.js",
     "dev": "node scripts/start.js",
     "server": "cd ./server/ && nodemon index.js --debug",
     "build": "node scripts/build.js",
