--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^2.10.1",
+    "classnames": "^2.2.5",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "morgan": "^1.8.1",
